cmake_minimum_required(VERSION 3.16)
project(KleeTool)

set(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Threads)
#FIND_PACKAGE(LLVM REQUIRED CONFIG)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_FILES)

ADD_EXECUTABLE(KleeTool ${SRC_FILES})

TARGET_LINK_LIBRARIES(KleeTool ${CMAKE_THREAD_LIBS_INIT})